samples/_failures_safe/1761477848_592189_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7221613f.c: In function ‘state_machine_step’:
./samples/SAFE/__tmp_7221613f.c:161:28: error: missing terminating " character
  161 |                     printf("Transition: ERROR -> ID
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_7221613f.c:161:21: error: expected expression at end of input
  161 |                     printf("Transition: ERROR -> ID
      |                     ^~~~~~
./samples/SAFE/__tmp_7221613f.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7221613f.c:161:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7221613f.c:161:21: error: expected declaration or statement at end of input
